backend/deploy/envs/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobilispect-api
spec:
  type: LoadBalancer
  selector:
    app: mobilispect-api
  ports:
    - name: 80-8080
      port: 80
      protocol: TCP
      targetPort: 8080
