backend/deploy/envs/prod/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobilispect-api
spec:
  ports:
    - name: 80-8080
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: mobilispect-api
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilispect-api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "mobilispect-api-static-ip"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: api.mobilispect.com
      http:
        paths:
          - backend:
              service:
                name: mobilispect-api
                port:
                  number: 80
            path: "/"
            pathType: Prefix
